packages/editor/editor.css
/* ... */
.tl-theme__light {
	--color-accent: #e64a4a;
	--color-background: rgb(249, 250, 251);
	--color-brush-fill: rgba(144, 144, 144, 0.102);
	--color-brush-stroke: rgba(144, 144, 144, 0.251);
	--color-grid: rgb(109, 109, 109);
	--color-low: rgb(237, 240, 242);
	--color-culled: rgb(235, 238, 240);
	--color-muted-0: rgba(0, 0, 0, 0.02);
	--color-muted-1: rgba(0, 0, 0, 0.1);
	--color-muted-2: rgba(0, 0, 0, 0.035);
	--color-hint: rgba(0, 0, 0, 0.055);
	--color-overlay: rgba(0, 0, 0, 0.2);
	--color-divider: #e8e8e8;
	--color-panel-contrast: #ffffff;
	--color-panel-overlay: rgba(255, 255, 255, 0.82);
	--color-panel: #fdfdfd;
	--color-focus: #004094;
	--color-selected: #2f80ed;
	--color-selected-contrast: #ffffff;
	--color-selection-fill: #1e90ff06;
	--color-selection-stroke: #2f80ed;
	--color-text-0: #1d1d1d;
	--color-text-1: #2d2d2d;
	--color-text-2: #5f6369;
	--color-text-3: #b6b7ba;
	--color-primary: #2f80ed;
	--color-warn: #d10b0b;
	--color-text: #000000;
	--color-laser: #ff0000;

	--shadow-1: 0px 1px 2px rgba(0, 0, 0, 0.22), 0px 1px 3px rgba(0, 0, 0, 0.09);
	--shadow-2: 0px 0px 2px rgba(0, 0, 0, 0.12), 0px 2px 3px rgba(0, 0, 0, 0.24),
		0px 2px 6px rgba(0, 0, 0, 0.1), inset 0px 0px 0px 1px var(--color-panel-contrast);
	--shadow-3: 0px 1px 2px rgba(0, 0, 0, 0.25), 0px 2px 6px rgba(0, 0, 0, 0.14),
		inset 0px 0px 0px 1px var(--color-panel-contrast);
	--shadow-4: 0px 0px 3px rgba(0, 0, 0, 0.16), 0px 5px 4px rgba(0, 0, 0, 0.16),
		0px 2px 16px rgba(0, 0, 0, 0.06), inset 0px 0px 0px 1px var(--color-panel-contrast);
}

.tl-theme__dark {
	--color-accent: #e64a4a;
	--color-background: #212529;
	--color-brush-fill: rgba(180, 180, 180, 0.05);
	--color-brush-stroke: rgba(180, 180, 180, 0.25);
	--color-grid: #909090;
	--color-low: #2c3136;
	--color-culled: rgb(47, 52, 57);
	--color-muted-0: rgba(255, 255, 255, 0.02);
	--color-muted-1: rgba(255, 255, 255, 0.1);
	--color-muted-2: rgba(255, 255, 255, 0.05);
	--color-hint: rgba(255, 255, 255, 0.1);
	--color-overlay: rgba(0, 0, 0, 0.35);
	--color-divider: #49555f;
	--color-panel-contrast: #49555f;
	--color-panel: #363d44;
	--color-panel-overlay: rgba(54, 61, 68, 0.82);
	--color-focus: #a5c3f3;
	--color-selected: #4285f4;
	--color-selected-contrast: #ffffff;
	--color-selection-fill: rgba(38, 150, 255, 0.05);
	--color-selection-stroke: #2f80ed;
	--color-text-0: #f0eded;
	--color-text-1: #d9d9d9;
	--color-text-2: #8e9094;
	--color-text-3: #515a62;
	--color-primary: #2f80ed;
	--color-warn: #d10b0b;
	--color-text: #f8f9fa;
	--color-laser: #ff0000;

	--shadow-1: 0px 1px 2px #00000029, 0px 1px 3px #00000038,
		inset 0px 0px 0px 1px var(--color-panel-contrast);
	--shadow-2: 0px 1px 3px #00000077, 0px 2px 6px #00000055,
		inset 0px 0px 0px 1px var(--color-panel-contrast);
	--shadow-3: 0px 1px 3px #00000077, 0px 2px 12px rgba(0, 0, 0, 0.22),
		inset 0px 0px 0px 1px var(--color-panel-contrast);
}

.tl-counter-scaled {
	transform: scale(var(--tl-scale));
	transform-origin: top left;
	width: calc(100% * var(--tl-zoom));
	height: calc(100% * var(--tl-zoom));
}

.tl-container,
.tl-container * {
	-webkit-touch-callout: none;
	-webkit-tap-highlight-color: transparent;
	scrollbar-highlight-color: transparent;
	-webkit-user-select: none;
	user-select: none;
	box-sizing: border-box;
	outline: none;
}

.tl-container a {
	-webkit-touch-callout: initial;
}

.tl-container:focus-within {
	outline: 1px solid var(--color-low);
}

input,
*[contenteditable],
*[contenteditable] * {
	-webkit-user-select: text;
}

/* -------------------------------------------------- */
/*                       Canvas                       */
/* -------------------------------------------------- */

.tl-canvas {
	position: absolute;
	top: 0px;
	left: 0px;
	width: 100%;
	height: 100%;
	background-color: var(--color-background);
	color: var(--color-text);
	z-index: var(--layer-canvas);
	cursor: var(--tl-cursor);
	overflow: clip;
	content-visibility: auto;
	touch-action: none;
	contain: strict;
}

.tl-shapes {
	position: relative;
	z-index: 1;
}

.tl-overlays {
	position: relative;
	z-index: 2;
}

.tl-overlays__item {
	position: absolute;
	top: 0px;
	left: 0px;
	height: 10px;
	width: 10px;
	overflow: visible;
	pointer-events: none;
	transform-origin: top left;
}

.tl-svg-context {
	position: absolute;
	top: 0px;
	left: 0px;
	height: 10px;
	width: 10px;
	pointer-events: none;
}

.tl-positioned {
	position: absolute;
	top: 0px;
	left: 0px;
	transform-origin: top left;
}

/* ------------------- Background ------------------- */

.tl-background {
	position: absolute;
	inset: 0px;
	background-color: var(--color-background);
}

/* --------------------- Grid Layer --------------------- */

.tl-grid {
	position: absolute;
	top: 0px;
	left: 0px;
	width: 100%;
	height: 100%;
	touch-action: none;
	pointer-events: none;
	z-index: 2;
}

.tl-grid-dot {
	fill: var(--color-grid);
}

/* --------------------- Layers --------------------- */

.tl-html-layer {
	position: absolute;
	top: 0px;
	left: 0px;
	width: 1px;
	height: 1px;
	contain: layout style size;
	z-index: 3;
}

/* ---------------------- Brush --------------------- */

.tl-brush {
	stroke-width: calc(var(--tl-scale) * 1px);
}

.tl-brush__default {
	stroke: var(--color-brush-stroke);
	fill: var(--color-brush-fill);
}

/* -------------------- Scribble -------------------- */

.tl-scribble {
	stroke-linejoin: round;
	stroke-linecap: round;
	pointer-events: none;
}

/* ---------------------- Shape --------------------- */

.tl-shape {
	position: absolute;
	pointer-events: none;
	overflow: visible;
	transform-origin: top left;
}

.tl-shape__culled {
	position: relative;
	background-color: var(--color-culled);
}

/* ---------------- Shape Containers ---------------- */

.tl-svg-container {
	position: absolute;
	top: 0px;
	left: 0px;
	width: 100%;
	height: 100%;
	pointer-events: none;
	stroke-linecap: round;
	stroke-linejoin: round;
	transform-origin: top left;
	overflow: visible;
}
/* ... */

